[project]
name = "leads-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dataclasses>=0.8.0",
    "exa-py>=1.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pycountry>=22.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
]
